# reactable

./: .gitignore  DESIGN.md  Justfile  PRODUCT.md  README.md  index.work  stage-lineup.json
agent/: index.work
bar/: index.work
cli/: README.md  package.json
docs/: CLI.work  GOALS.account-payments.work  GOALS.content-intelligence.work  GOALS.local-agent.work  PLAN.content-intelligence.work  PLAN.footage-intel.work  PLAN.omni-editing-model.work  PLAN.wavelet.work  PLAN.work  PRICING-INTELLIGENCE.work  PRICING-VALIDATION.work  PROJECTS.work  ROADMAP.agent-toolchain.work  SECURITY-RISK-SURFACE.work  TAXONOMY.work  UNIT-ECONOMICS.work
editor/: index.work
gpu/: modal_footage.py  modal_train.py
ios/: Info.plist  Reactable.swift  run.sh
manager/: index.work
native/: .gitignore  Package.resolved  Package.swift
palette/: index.work
present/: api.work  index.work
projects/: index.work
research/: brief-2026-W28.md  caraway-pan-launch.md  remix-xUdKBqP81k8.md
scripts/: build-sidecar.sh  build-tools.sh  check-apple-release.sh  compile-skills.ts  composite.py  eval-intel.ts  fidelity-gate.ts  fixture-take.sh  footage-embed.py  footage-mlx.py  gen-lab-samples.sh  manual-agent-checklist.md  mirror-all-models.sh  ocr-frames.swift  p3-check.sh  release-dmg.sh  setup-mlx.sh  smoke-agent.sh  smoke-mlx.sh  test-agent-stub.sh  test-intel.ts  to-video.sh  upload-model-r2.sh  validate-agent-e2e.sh  (+1 more)
tools/: Cargo.toml
tools/src/: agent.rs  agent_llm.rs  doctor.rs  ffmpeg_util.rs  har.rs  isolate.rs  main.rs  mlx_stt.rs  mlx_tts.rs  transcribe.rs  vad.rs  wavelet.rs
(+354 files in other folders)
