[package]
name = "reactable-tools"
version = "0.1.0"
edition = "2021"
description = "Native MLX toolchain sidecar for Reactable — ffmpeg, Moonshine STT, Kokoro TTS"

[[bin]]
name = "reactable-tools"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
regex = "1"
ureq = { version = "2", features = ["json"] }

[target.'cfg(target_os = "macos")'.dependencies]
voice-stt = "0.1"
voice-tts = "0.2"
voice-g2p = "0.2"
