[package]
name = "reactable-tools"
version = "0.1.0"
edition = "2021"
description = "Native MLX toolchain sidecar for Reactable — ffmpeg, Moonshine STT, Kokoro TTS"

[[bin]]
name = "reactable-tools"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
regex = "1"
ureq = { version = "2", features = ["json"] }
# Exploration checkout (workbooks-wasmvideo worktree) so render-core edits (font fixes,
# frame-loop) land in the worktree, never the main workbooks tree. Flip to
# ../../../../workbooks/nexus/... when the exploration merges.
wavelet-render-core = { path = "../../../../workbooks-wasmvideo/nexus/wasm-video/crates/wavelet-render-core" }

[target.'cfg(target_os = "macos")'.dependencies]
voice-stt = "0.1"
voice-tts = "0.2"
voice-g2p = "0.2"
